Thu Oct 27 14:20:35 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_global.cpp:
        
          Modified change in
          
          Wed Oct 26 18:57:47 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

          to handle the use case where skeleton files are generated
          from a .pidl file, for example tao/ImR_Client/ImplRepo.pidl.
          Thanks to Johnny Willemsen <jwillemsen@remedy.nl> for
          reporting the problem.

Thu Oct 27 14:31:12 2005  Simon McQueen  <sm@prismtech.com>

        * orbsvcs/tests/Bug_2287_Regression/Hello.cpp:

          Fix gcc unused arg warning. 

Thu Oct 27 13:36:53 2005  Simon McQueen  <sm@prismtech.com>

        * orbsvcs/tests/Bug_2285_Regression/Hello.h:
        * orbsvcs/tests/Bug_2287_Regression/Hello.h:
        * orbsvcs/tests/Bug_2285_Regression/ServerORBInitializer.h:
        * orbsvcs/tests/Bug_2285_Regression/ServerORBInitializer2.h:
        * orbsvcs/tests/Bug_2285_Regression/ServerRequest_Interceptor.h:
        * orbsvcs/tests/Bug_2285_Regression/ServerRequest_Interceptor2.h:
        * orbsvcs/tests/Bug_2287_Regression/ServerORBInitializer2.h:
        * orbsvcs/tests/Bug_2287_Regression/ServerRequest_Interceptor2.h:

          Fix the obligatory fuzz errors.

Thu Oct 27 11:41:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
        * tao/GIOP_Utils.cpp:
        * tao/Transport_Connector.cpp:
        * tao/CSD_ThreadPool/CSD_TP_Strategy_Factory.cpp:
          64bit fixes

Thu Oct 27 11:30:59 2005  Simon McQueen  <sm@prismtech.com>

        * tao/operation_details.h:
        * tao/operation_details.i:

          Add members (with accessors) for the FT request retention ID and
          expiration time.

        * tao/PI/ClientRequestInfo.cpp:
        * tao/PI/ClientRequestInfo.h:

          Add accessors for the FT request retention ID and expiration time
          of the underlying request operation details (see above).
